syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;


message HmdaFilerMessage {
    string institutionId = 1;
    string respondentId = 2;
    string period = 3;
    string name = 4;
}