syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "SubmissionEvents.proto";

message SubmissionSignedPubSubMessage {
    SubmissionIdMessage submissionId = 1;
}

message FindAggregatePublisherMessage {}

message FindDisclosurePublisherMessage {}

message GenerateDisclosureReportsMessage {
    SubmissionIdMessage submissionId = 1;
}

message GenerateAggregateReportsMessage {
    int32 start = 1;
}
